--- a/package.json
+++ b/package.json
@@ -58,7 +58,12 @@
     },
     "win": {
       "icon": "build/icon.ico",
-      "target": "nsis"
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64", "arm64"]
+        }
+      ]
     }
   },
   "repository": {
