--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tarumt-attendance-app",
-  "version": "1.2.0",
+  "name": "tarumt-attendance",
+  "version": "1.3.0",
   "description": "TARUMT Student Attendance Desktop Application",
   "main": "main.js",
   "scripts": {
